test/preprocessor/fail/warning.osl
#warning "This should produce a warning"
